# tunesynctool

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  navify.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: python-package.yml
examples/: copy_spotify_playlist_to_navidrome.py
navify/: __init__.py
navify/cli/: main.py
navify/cli/commands/: transfer.py
navify/cli/utils/: driver.py
navify/drivers/: __init__.py  service_driver.py  spotify.py  subsonic.py
navify/drivers/common/: __init__.py
navify/exceptions/: __init__.py
navify/features/: playlist_sync.py  track_matcher.py
navify/integrations/: musicbrainz.py
navify/models/: configuration.py  playlist.py  track.py
tests/matching/: test_normalization.py
tests/mock/: spotify_playlist.json  spotify_track.json  subsonic_playlist.json  subsonic_track.json  youtube_playlist.json  youtube_search.json  youtube_track.json
tests/models/: test_playlist.py  test_track.py
tests/spotify_driver/: test_mapping.py  test_spotify_mapping.py
tests/subsonic_driver/: test_subsonic_mapping.py
tests/youtube_driver/: test_youtube_mapping.py
tunesynctool/: __init__.py
tunesynctool/cli/commands/: sync.py  transfer.py
tunesynctool/drivers/: __init__.py  async_service_driver.py  service_driver.py  service_mapper.py
tunesynctool/drivers/common/: __init__.py
tunesynctool/features/: __init__.py  async_track_matcher.py  track_matcher.py
tunesynctool/integrations/: musicbrainz.py
tunesynctool/models/: configuration.py  playlist.py  track.py
tunesynctool/utilities/: __init__.py  collections.py  normalization.py
webui/api/: .env.example  main.py
webui/api/core/: __init__.py  config.py  context.py  database.py  logging.py  redis.py  security.py
webui/api/exceptions/: auth.py
webui/api/helpers/: database.py  encryption.py  extraction.py  mapping.py  route_level_dependencies.py  service_driver.py  ytmusicapi.py
webui/api/models/: collection.py  deezer_arl.py  entity.py  playlist.py  search.py  service.py  state.py  subsonic.py  task.py  token.py  track.py  user.py
webui/api/routes/: __init__.py  auth.py  catalog.py  library.py  router.py  tasks.py  users.py
webui/api/services/: asset_service.py  auth_service.py  catalog_service.py  credentials_service.py  deezer_service.py  library_service.py  provider_service.py  service_driver_helper_service.py  (+6 more)
webui/frontend/: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  eslint.config.ts  index.html  package-lock.json  package.json
(+149 files in other folders)
