[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tunesynctool"
version = "1.1.0"
authors = [
    { name="WilliamNT", email="wntbox@gmail.com" }
]
description = "A package and CLI tool to build scripts that interact with various music streaming services."
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "spotipy",
    "py-sonic",
    "musicbrainzngs",
    "thefuzz",
    "streamrip",
    "ytmusicapi",
    "click",
    "tqdm",
    'importlib-metadata; python_version<"3.11"',
]

[project.urls]
Homepage = "https://github.com/WilliamNT/tunesynctool"
Issues = "https://github.com/WilliamNT/tunesynctool/issues"
Documentation = "https://github.com/WilliamNT/tunesynctool/wiki"

[project.scripts]
tunesynctool = "tunesynctool.cli.main:cli"